# pico2pico

./: CMakeLists.txt
spi/spi_messaging/spi_master/: CMakeLists.txt  spi_master.c
spi/spi_messaging/spi_slave/: CMakeLists.txt
